Use maven-invoker-plugin to test replacing the omnibus provider